# ObsidianReaderMCP

./: CHANGELOG.md  README.md  pyproject.toml
src/obsidianreadermcp/: client.py  config.py  exceptions.py  extensions.py  models.py  server.py
